<resources>
    <string name="add_field">Add a new list field</string>
    <string name="add_item">Add new item</string>
    <string name="add_list">Create a new list</string>
    <string name="app_name">Here Are My Lists</string>
    <string name="ascending">Ascending</string>
    <string name="bad_header">List fields mismatch</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="create_fail">Unable to start the app. Try again.</string>
    <string name="data_fail">Unable to read data</string>
    <string name="decrypt_fail">Incorrect password</string>
    <string name="defined_lists_help_1">to search for a list</string>
    <string name="defined_lists_help_2">Tap on the name of a list to view the items in that list</string>
    <string name="defined_lists_help_3">Swipe a list name to delete that list</string>
    <string name="defined_lists_help_4">Tap on Create a new list to start a new list</string>
    <string name="delete_items">and delete all of its items? This cannot be undone!</string>
    <string name="descending">Descending</string>
    <string name="done">Done</string>
    <string name="duplicate_field_name">Duplicate field name</string>
    <string name="duplicate_item">Duplicate item</string>
    <string name="duplicate_list_name">Duplicate list name</string>
    <string name="edit_field_help_1">For each field enter the name of the field</string>
    <string name="edit_field_help_2">For each field select the field type</string>
    <string name="edit_field_help_3">date: use for date values (sorts by date)</string>
    <string name="edit_field_help_4">email: use for email addresses (will appear as suggested email addresses when emailing any list)</string>
    <string name="edit_field_help_5">email addresses in encrypted lists will not appear as suggested email addresses for other lists</string>
    <string name="edit_field_help_6">number: use for number values (sorts numerically)</string>
    <string name="edit_field_help_7">phone: use for phone numbers (can be pasted into the phone app)</string>
    <string name="edit_field_help_8">photo: use to display photographs</string>
    <string name="edit_field_help_9">There can only be one photo field in a list</string>
    <string name="edit_field_help_10">Any photo field will always be the last field in the list</string>
    <string name="edit_field_help_11">Encrypted lists cannot contain photographs</string>
    <string name="edit_field_help_12">text: use for normal text (sorts alphabetically)</string>
    <string name="edit_field_help_13">time: use for time values (sorts by time)</string>
    <string name="edit_field_help_14">url: use for web site addresses (can be pasted into the browser app)</string>
    <string name="edit_field_help_15">Select Field sorting: Ascending to use this field for sorting the list with ascending values in this field</string>
    <string name="edit_field_help_16">Select Field sorting: Descending to use this field for sorting the list with descending values in this field</string>
    <string name="edit_field_help_17">More than one field can be used to sort a list</string>
    <string name="edit_field_help_18">If Field sorting: is Off for all fields in the list, the items in the list will appear in the order they were entered</string>
    <string name="edit_field_help_19">Change the value under Field order: if you want to change the order of the columns in the list</string>
    <string name="edit_field_help_20">Changing a text field to a non-text type will cause the values for that field to be deleted</string>
    <string name="edit_item_help_1">to save the updated item</string>
    <string name="edit_item_help_2">Update the field value next to the field name</string>
    <string name="edit_item_help_3">Flip the filters switch to filter the list based on the value of that field</string>
    <string name="edit_item_help_4">More than one field can be used to filter the list</string>
    <string name="edit_item_help_5">If the list contains photographs:</string>
    <string name="edit_item_help_6">to add or change a photograph in the list</string>
    <string name="edit_item_help_7">If the list contains phone numbers:</string>
    <string name="edit_item_help_8">to enter the phone number into the phone app</string>
    <string name="edit_item_help_9">If the list contains URLs:</string>
    <string name="edit_item_help_10">to go to that web site</string>
    <string name="edit_list_name">Update list name:</string>
    <string name="email_address">Enter email address:</string>
    <string name="email_encrypted">Warning! This list is encrypted, if you proceed the data will be emailed without encryption.</string>
    <string name="email_list">Email the list</string>
    <string name="encrypt_button">Encrypt the list</string>
    <string name="encrypt_fail">Encryption failure</string>
    <string name="encrypt_off">Encryption off</string>
    <string name="encrypt_on">Encryption on</string>
    <string name="encrypt_password">Enter encryption password:</string>
    <string name="enter_field_name">Enter a field name</string>
    <string name="field_name">Field name:</string>
    <string name="field_order">Field order:</string>
    <string name="field_sorting">Field sorting:</string>
    <string name="field_type">Field type:</string>
    <string name="file_not_found">File not found</string>
    <string name="file_read_error">Unable to read file</string>
    <string name="file_type">Please select a CSV file</string>
    <string name="filter">Filters</string>
    <string name="filters_removed">Filters removed</string>
    <string name="frag_fail">Unable to open list. Restart app.</string>
    <string name="help">Help</string>
    <string name="icon">display icon</string>
    <string name="import_button">import file</string>
    <string name="import_complete">Import complete</string>
    <string name="import_fail">records failed</string>
    <string name="import_results">Import Results</string>
    <string name="invalid_number">Invalid number entry</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="item_saved">Item saved</string>
    <string name="item_updated">Update complete</string>
    <string name="items">items</string>
    <string name="lines_duplicate">duplicate records</string>
    <string name="lines_imported">lines imported</string>
    <string name="lines_invalid_date">lines with invalid dates</string>
    <string name="lines_invalid_number">lines with invalid numbers</string>
    <string name="lines_invalid_phone">lines with invalid phone numbers</string>
    <string name="lines_invalid_time">lines with invalid times</string>
    <string name="list_change">change the list fields</string>
    <string name="list_item">Do you want to delete this list item?</string>
    <string name="lose_data">If you click YES you will lose all data for fields:</string>
    <string name="name_change">change the list name</string>
    <string name="new_definition_help_1">to encrypt the list</string>
    <string name="new_definition_help_2">Encrypted lists cannot contain photographs</string>
    <string name="new_definition_help_3">to save the new list</string>
    <string name="new_definition_help_4">In Enter list name: enter the name of the list</string>
    <string name="new_definition_help_5">Tap Add a new list field to add a new  column to the list</string>
    <string name="new_definition_help_6">Swipe a field to remove it from the list</string>
    <string name="new_item_help_1">to save the new item</string>
    <string name="new_item_help_2">Enter the field value next to the field name</string>
    <string name="new_item_help_3">If the list contains photographs</string>
    <string name="new_item_help_4">to add a photograph to the list</string>
    <string name="new_item_help_5">Flip the filters switch to filter the list using that item value</string>
    <string name="new_list_name">Enter list name:</string>
    <string name="no">NO</string>
    <string name="no_data">Enter a value</string>
    <string name="no_email">There are no email clients installed.</string>
    <string name="no_encrypt_photo">Photographs are not allowed in an encrypted list</string>
    <string name="no_fields">Please add at least one field to the list</string>
    <string name="no_phone">Unable to start phone app</string>
    <string name="no_web">Unable to open web browser</string>
    <string name="off">Off</string>
    <string name="ok">OK</string>
    <string name="one_photo">Only one photo field is allowed in a list, the photo field must be the last field in the list</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="password_requirements">The password must contain:\nat least one number\nat least one lower case letter\nat least one upper case letter\nand at least one special character</string>
    <string name="phone">Place phone call</string>
    <string name="photo">Photograph</string>
    <string name="photo_sort">Can not sort by a photo field</string>
    <string name="remove_list">Do you want to delete the list</string>
    <string name="resume_fail">Unable to restart the app. Try again.</string>
    <string name="save_button">Save</string>
    <string name="search">Search</string>
    <string name="select_date">Select date</string>
    <string name="select_photo">Select Photograph</string>
    <string name="select_time">Select time</string>
    <string name="set_encrypt_off">Do you want to remove encryption for this list?</string>
    <string name="set_encrypt_on">Do you want to add encryption for this list? If you encrypt the list, you will be required to enter a password each time you enter the list.</string>
    <string name="sort">Sort</string>
    <string name="sorting">Sorting</string>
    <string name="sorts_removed">Sorting removed</string>
    <string name="store_error">Unable to store data</string>
    <string name="stored_list_help_1">to find a phrase in the list (search is case insensitive)</string>
    <string name="stored_list_help_2">Use *phrase to search for a word that ends with the phrase</string>
    <string name="stored_list_help_3">Use phrase* to search for a word that starts with the phrase</string>
    <string name="stored_list_help_4">Use phrase1*phrase2 to search for items that contain phrase1 followed by phrase2</string>
    <string name="stored_list_help_5">Tap the field names to update the layout of the list or to select fields to sort by</string>
    <string name="stored_list_help_6">Tap on a list item to view/edit that item or to filter the list with that item value</string>
    <string name="stored_list_help_7">Tap on Add a new item to add a new item to the list</string>
    <string name="stored_list_help_8">Flip the filter switch to turn off all filtering for the list</string>
    <string name="stored_list_help_9">Flip the sorting switch to turn off all sorting for the list</string>
    <string name="stored_list_help_10">to import a CSV file into the list</string>
    <string name="stored_list_help_11">to email the list</string>
    <string name="stored_list_help_12">Photographs will not be emailed</string>
    <string name="stored_list_help_13">If the list contains photographs, tap on a photograph to enlarge it</string>
    <string name="stored_list_help_14">When importing a file:</string>
    <string name="type_date">Date</string>
    <string name="type_email">Email</string>
    <string name="type_number">Number</string>
    <string name="type_phone">Phone</string>
    <string name="type_photo">Photo</string>
    <string name="type_text">Text</string>
    <string name="type_time">Time</string>
    <string name="type_url">URL</string>
</resources>