<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:title="@string/save_button"
        android:icon="@drawable/save_icon"
        android:orderInCategory="10"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/encrypt"
        android:title="@string/encrypt_button"
        android:icon="@drawable/lock_icon"
        android:orderInCategory="20"
        app:showAsAction="collapseActionView|ifRoom"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        android:orderInCategory="40"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help_icon"
        android:orderInCategory="9999"
        app:showAsAction="collapseActionView|ifRoom"/>
</menu>
