<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/textViewFieldsMain"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="6dp"
        android:paddingBottom="3dp"
        android:gravity="start"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewFieldsMore"/>

    <TextView
        android:id="@+id/textViewFieldsMore"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        android:gravity="start"
        android:singleLine="false"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewFieldsMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewStoredList"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewStoredList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewFieldsMore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddItem"/>

    <ScrollView
        android:id="@+id/progressBarLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:visibility="gone"
        android:fillViewport="true"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddItem">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:theme="@style/progressBarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorWhite"/>
    </ScrollView>

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/add_item"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewStoredList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar"/>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAllFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:switchMinWidth="48dp"
            android:text="@string/filter"
            android:textColor="@color/colorBlack"
            android:textOn=""
            android:textOff=""
            android:theme="@style/SwitchStyle"
            android:background="@color/colorPrimary"/>

        <ImageButton
            android:id="@+id/buttonImport"
            android:scaleType="fitXY"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/import_file_icon"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/import_button"/>

        <ImageButton
            android:id="@+id/buttonEmail"
            android:scaleType="fitXY"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/email_icon"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/email_list"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAllSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:switchMinWidth="48dp"
            android:text="@string/sorting"
            android:textColor="@color/colorBlack"
            android:textOn=""
            android:textOff=""
            android:theme="@style/SwitchStyle"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
